--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:restart": "docker compose down && docker compose up -d && sleep 1",
-    "pretest:int": "pnpm db:restart && npx prisma migrate reset --force",
+    "db:restart": "docker compose down && docker compose up -d && sleep 3",
+    "pretest:int": "prisma migrate reset --force && pnpm db:restart",
     "test:int": "jest -i --no-cache --watch --config jest-int.json"
   },
   "dependencies": {
